fixed bug with header visibility update

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,8 @@ i.delete.icon {
 a.ui.label {
   color: black !important;
 }
+
+.header-dropdown {
+  display: flex;
+  align-items: center;
+}
